<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Fun With Animations</string>

	<string name="transition_simple_shared_element">transition_simple_shared_element</string>
	<string name="simple_shared_element">Simple Shared Element</string>

	<string name="shop_card">Shop Card</string>
	<string name="simple_custom_behavior">Simple Custom Behavior</string>
	<string name="hide">Hide</string>
	<string name="show">Show</string>
	<string name="card">card</string>
	<string name="transition_shop_card">transition_simple_shared_element</string>
	<string name="love">love</string>
</resources>
