<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:background="@color/white"
		android:elevation="2dp"
		android:gravity="center_vertical"
		android:paddingStart="16dp"
		android:text="@string/shop_card"
		android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="60dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="72dp"
		android:background="@drawable/bg_white_radius_8dp"
		android:elevation="2dp"
		android:orientation="vertical"
		android:paddingBottom="16dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingTop="32dp">

		<ImageView
			android:id="@+id/shop_card_barcode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="top|center_horizontal"
			android:layout_marginBottom="24dp"
			android:src="@drawable/ic_barcode" />

		<Button
			android:id="@+id/shop_card_hide_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:text="@string/hide" />

	</FrameLayout>

	<LinearLayout
		android:id="@+id/shop_card_bottom_sheet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_white_with_offset_8dp"
		android:elevation="2dp"
		android:orientation="vertical"
		app:behavior_peekHeight="48dp"
		app:behavior_skipCollapsed="true"
		app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

		<TextView
			android:id="@+id/shop_card_card"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:background="@drawable/bg_accent_radius_8dp"
			android:gravity="center"
			android:text="card"
			android:textColor="@android:color/white" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/shop_card_show_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/show" />

	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
